public/js/ast.js
ast = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = peg$FAILED,
        peg$c1 = null,
        peg$c2 = [],
        peg$c3 = function(i, o, f) {
                                                          var start_ = [];
                                                          if(i) start_ = start_.concat(i);
                                                          if(o) start_ = start_.concat(o);
                                                          if(f) start_ = start_.concat(f);
                                                          return start_;
                                                        },
        peg$c4 = function(i) { return {type: 'HEAD', value: i}; },
        peg$c5 = function(l, w, h) {
                                                          var options_ = [];
                                                          if(l) options_ = options_.concat(l);
                                                          if(w) options_ = options_.concat(w);
                                                          if(h) options_ = options_.concat(h);
                                                          return options_;
                                                        },
        peg$c6 = function(p, v) { return {type: 'LOGO', value: p}; },
        peg$c7 = function(n) { return {type: 'WIDTH', value: n}; },
        peg$c8 = function(n) { return {type: 'HEIGHT', value: n}; },
        peg$c9 = function(w) { return w; },
        peg$c10 = function(l) { return l; },
        peg$c11 = function(t) { return t; },
        peg$c12 = function(e) { return e; },
        peg$c13 = function(d) { return d; },
        peg$c14 = function(r) { return r; },
        peg$c15 = function(p) { return p; },
        peg$c16 = function(c) { return c; },
        peg$c17 = function(b) { return b; },
        peg$c18 = function(f) { return f; },
        peg$c19 = function() { return {type: 'RAG', value: v}; },
        peg$c20 = function(l, i, v) { return {type: 'RAG', value: v}; },
        peg$c21 = function(v) { return {type: 'RAG', value: v}; },
        peg$c22 = function(l, i) { return {type: 'RAG', value: v}; },
        peg$c23 = /^[ \t\n\r]/,
        peg$c24 = { type: "class", value: "[ \\t\\n\\r]", description: "[ \\t\\n\\r]" },
        peg$c25 = "=",
        peg$c26 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c27 = ".",
        peg$c28 = { type: "literal", value: ".", description: "\".\"" },
        peg$c29 = ";",
        peg$c30 = { type: "literal", value: ";", description: "\";\"" },
        peg$c31 = /^[a-zA-Z_]/,
        peg$c32 = { type: "class", value: "[a-zA-Z_]", description: "[a-zA-Z_]" },
        peg$c33 = /^[a-zA-Z_0-9]/,
        peg$c34 = { type: "class", value: "[a-zA-Z_0-9]", description: "[a-zA-Z_0-9]" },
        peg$c35 = function(id) { return id; },
        peg$c36 = /^[0-9]/,
        peg$c37 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c38 = function(digits) { return parseInt(digits, 10); },
        peg$c39 = /^["]/,
        peg$c40 = { type: "class", value: "[\"]", description: "[\"]" },
        peg$c41 = /^[\/]/,
        peg$c42 = { type: "class", value: "[\\/]", description: "[\\/]" },
        peg$c43 = /^[a-zA-Z0-9\/]/,
        peg$c44 = { type: "class", value: "[a-zA-Z0-9\\/]", description: "[a-zA-Z0-9\\/]" },
        peg$c45 = { type: "any", description: "any character" },
        peg$c46 = function(path) { return path; },
        peg$c47 = /^[a-zA-Z0-9\-_ ]/,
        peg$c48 = { type: "class", value: "[a-zA-Z0-9\\-_ ]", description: "[a-zA-Z0-9\\-_ ]" },
        peg$c49 = function(val) { return val; },
        peg$c50 = /^[a-zA-Z_0-9.\-]/,
        peg$c51 = { type: "class", value: "[a-zA-Z_0-9.\\-]", description: "[a-zA-Z_0-9.\\-]" },
        peg$c52 = /^[@]/,
        peg$c53 = { type: "class", value: "[@]", description: "[@]" },
        peg$c54 = /^[a-zA-Z]/,
        peg$c55 = { type: "class", value: "[a-zA-Z]", description: "[a-zA-Z]" },
        peg$c56 = function(email) { return email; },
        peg$c57 = /^[0-9 ]/,
        peg$c58 = { type: "class", value: "[0-9 ]", description: "[0-9 ]" },
        peg$c59 = function(tlf) { return tlf; },
        peg$c60 = "begin",
        peg$c61 = { type: "literal", value: "begin", description: "\"begin\"" },
        peg$c62 = "BEGIN",
        peg$c63 = { type: "literal", value: "BEGIN", description: "\"BEGIN\"" },
        peg$c64 = "end",
        peg$c65 = { type: "literal", value: "end", description: "\"end\"" },
        peg$c66 = "END",
        peg$c67 = { type: "literal", value: "END", description: "\"END\"" },
        peg$c68 = "head",
        peg$c69 = { type: "literal", value: "head", description: "\"head\"" },
        peg$c70 = "HEAD",
        peg$c71 = { type: "literal", value: "HEAD", description: "\"HEAD\"" },
        peg$c72 = "options",
        peg$c73 = { type: "literal", value: "options", description: "\"options\"" },
        peg$c74 = "OPTIONS",
        peg$c75 = { type: "literal", value: "OPTIONS", description: "\"OPTIONS\"" },
        peg$c76 = "logo",
        peg$c77 = { type: "literal", value: "logo", description: "\"logo\"" },
        peg$c78 = "LOGO",
        peg$c79 = { type: "literal", value: "LOGO", description: "\"LOGO\"" },
        peg$c80 = "width",
        peg$c81 = { type: "literal", value: "width", description: "\"width\"" },
        peg$c82 = "WIDTH",
        peg$c83 = { type: "literal", value: "WIDTH", description: "\"WIDTH\"" },
        peg$c84 = "height",
        peg$c85 = { type: "literal", value: "height", description: "\"height\"" },
        peg$c86 = "HEIGHT",
        peg$c87 = { type: "literal", value: "HEIGHT", description: "\"HEIGHT\"" },
        peg$c88 = "form",
        peg$c89 = { type: "literal", value: "form", description: "\"form\"" },
        peg$c90 = "FORM",
        peg$c91 = { type: "literal", value: "FORM", description: "\"FORM\"" },
        peg$c92 = ":",
        peg$c93 = { type: "literal", value: ":", description: "\":\"" },
        peg$c94 = "-",
        peg$c95 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c96 = "txt",
        peg$c97 = { type: "literal", value: "txt", description: "\"txt\"" },
        peg$c98 = "TXT",
        peg$c99 = { type: "literal", value: "TXT", description: "\"TXT\"" },
        peg$c100 = "chx",
        peg$c101 = { type: "literal", value: "chx", description: "\"chx\"" },
        peg$c102 = "CHX",
        peg$c103 = { type: "literal", value: "CHX", description: "\"CHX\"" },
        peg$c104 = "rbt",
        peg$c105 = { type: "literal", value: "rbt", description: "\"rbt\"" },
        peg$c106 = "RBT",
        peg$c107 = { type: "literal", value: "RBT", description: "\"RBT\"" },
        peg$c108 = "pwd",
        peg$c109 = { type: "literal", value: "pwd", description: "\"pwd\"" },
        peg$c110 = "PWD",
        peg$c111 = { type: "literal", value: "PWD", description: "\"PWD\"" },
        peg$c112 = "email",
        peg$c113 = { type: "literal", value: "email", description: "\"email\"" },
        peg$c114 = "EMAIL",
        peg$c115 = { type: "literal", value: "EMAIL", description: "\"EMAIL\"" },
        peg$c116 = "tel",
        peg$c117 = { type: "literal", value: "tel", description: "\"tel\"" },
        peg$c118 = "TEL",
        peg$c119 = { type: "literal", value: "TEL", description: "\"TEL\"" },
        peg$c120 = "dat",
        peg$c121 = { type: "literal", value: "dat", description: "\"dat\"" },
        peg$c122 = "DAT",
        peg$c123 = { type: "literal", value: "DAT", description: "\"DAT\"" },
        peg$c124 = "rag",
        peg$c125 = { type: "literal", value: "rag", description: "\"rag\"" },
        peg$c126 = "RAG",
        peg$c127 = { type: "literal", value: "RAG", description: "\"RAG\"" },
        peg$c128 = "lbl",
        peg$c129 = { type: "literal", value: "lbl", description: "\"lbl\"" },
        peg$c130 = "LBL",
        peg$c131 = { type: "literal", value: "LBL", description: "\"LBL\"" },
        peg$c132 = "btn",
        peg$c133 = { type: "literal", value: "btn", description: "\"btn\"" },
        peg$c134 = "BTN",
        peg$c135 = { type: "literal", value: "BTN", description: "\"BTN\"" },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      s1 = peg$parseBEGIN();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseinitialize();
        if (s2 === peg$FAILED) {
          s2 = peg$c1;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseoptions();
          if (s3 === peg$FAILED) {
            s3 = peg$c1;
          }
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parseform();
            if (s5 !== peg$FAILED) {
              while (s5 !== peg$FAILED) {
                s4.push(s5);
                s5 = peg$parseform();
              }
            } else {
              s4 = peg$c0;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseEND();
              if (s5 !== peg$FAILED) {
                s6 = peg$parseDOT();
                if (s6 !== peg$FAILED) {
                  peg$reportedPos = s0;
                  s1 = peg$c3(s2, s3, s4);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$c0;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseinitialize() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parseHEAD();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseID();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c4(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseoptions() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$parseOPTIONS();
      if (s1 !== peg$FAILED) {
        s2 = peg$parselogo();
        if (s2 === peg$FAILED) {
          s2 = peg$c1;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parsewidth();
          if (s3 === peg$FAILED) {
            s3 = peg$c1;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseheight();
            if (s4 === peg$FAILED) {
              s4 = peg$c1;
            }
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c5(s2, s3, s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parselogo() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseLOGO();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsePATH();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseVALUE();
          if (s3 === peg$FAILED) {
            s3 = peg$c1;
          }
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c6(s2, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsewidth() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parseWIDTH();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseNUMBER();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c7(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseheight() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parseHEIGHT();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseNUMBER();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c8(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseform() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$parseFORM();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parsewhiteline();
        if (s4 !== peg$FAILED) {
          peg$reportedPos = s3;
          s4 = peg$c9(s4);
        }
        s3 = s4;
        if (s3 === peg$FAILED) {
          s3 = peg$currPos;
          s4 = peg$parseline();
          if (s4 !== peg$FAILED) {
            peg$reportedPos = s3;
            s4 = peg$c10(s4);
          }
          s3 = s4;
          if (s3 === peg$FAILED) {
            s3 = peg$currPos;
            s4 = peg$parsetextbox();
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s3;
              s4 = peg$c11(s4);
            }
            s3 = s4;
            if (s3 === peg$FAILED) {
              s3 = peg$currPos;
              s4 = peg$parseemail();
              if (s4 !== peg$FAILED) {
                peg$reportedPos = s3;
                s4 = peg$c12(s4);
              }
              s3 = s4;
              if (s3 === peg$FAILED) {
                s3 = peg$currPos;
                s4 = peg$parsetel();
                if (s4 !== peg$FAILED) {
                  peg$reportedPos = s3;
                  s4 = peg$c11(s4);
                }
                s3 = s4;
                if (s3 === peg$FAILED) {
                  s3 = peg$currPos;
                  s4 = peg$parsedate();
                  if (s4 !== peg$FAILED) {
                    peg$reportedPos = s3;
                    s4 = peg$c13(s4);
                  }
                  s3 = s4;
                  if (s3 === peg$FAILED) {
                    s3 = peg$currPos;
                    s4 = peg$parserange();
                    if (s4 !== peg$FAILED) {
                      peg$reportedPos = s3;
                      s4 = peg$c14(s4);
                    }
                    s3 = s4;
                    if (s3 === peg$FAILED) {
                      s3 = peg$currPos;
                      s4 = peg$parsepassword();
                      if (s4 !== peg$FAILED) {
                        peg$reportedPos = s3;
                        s4 = peg$c15(s4);
                      }
                      s3 = s4;
                      if (s3 === peg$FAILED) {
                        s3 = peg$currPos;
                        s4 = peg$parsecheckbox();
                        if (s4 !== peg$FAILED) {
                          peg$reportedPos = s3;
                          s4 = peg$c16(s4);
                        }
                        s3 = s4;
                        if (s3 === peg$FAILED) {
                          s3 = peg$currPos;
                          s4 = peg$parseradiobutton();
                          if (s4 !== peg$FAILED) {
                            peg$reportedPos = s3;
                            s4 = peg$c14(s4);
                          }
                          s3 = s4;
                          if (s3 === peg$FAILED) {
                            s3 = peg$currPos;
                            s4 = peg$parselabel();
                            if (s4 !== peg$FAILED) {
                              peg$reportedPos = s3;
                              s4 = peg$c10(s4);
                            }
                            s3 = s4;
                            if (s3 === peg$FAILED) {
                              s3 = peg$currPos;
                              s4 = peg$parsebutton();
                              if (s4 !== peg$FAILED) {
                                peg$reportedPos = s3;
                                s4 = peg$c17(s4);
                              }
                              s3 = s4;
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parsewhiteline();
          if (s4 !== peg$FAILED) {
            peg$reportedPos = s3;
            s4 = peg$c9(s4);
          }
          s3 = s4;
          if (s3 === peg$FAILED) {
            s3 = peg$currPos;
            s4 = peg$parseline();
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s3;
              s4 = peg$c10(s4);
            }
            s3 = s4;
            if (s3 === peg$FAILED) {
              s3 = peg$currPos;
              s4 = peg$parsetextbox();
              if (s4 !== peg$FAILED) {
                peg$reportedPos = s3;
                s4 = peg$c11(s4);
              }
              s3 = s4;
              if (s3 === peg$FAILED) {
                s3 = peg$currPos;
                s4 = peg$parseemail();
                if (s4 !== peg$FAILED) {
                  peg$reportedPos = s3;
                  s4 = peg$c12(s4);
                }
                s3 = s4;
                if (s3 === peg$FAILED) {
                  s3 = peg$currPos;
                  s4 = peg$parsetel();
                  if (s4 !== peg$FAILED) {
                    peg$reportedPos = s3;
                    s4 = peg$c11(s4);
                  }
                  s3 = s4;
                  if (s3 === peg$FAILED) {
                    s3 = peg$currPos;
                    s4 = peg$parsedate();
                    if (s4 !== peg$FAILED) {
                      peg$reportedPos = s3;
                      s4 = peg$c13(s4);
                    }
                    s3 = s4;
                    if (s3 === peg$FAILED) {
                      s3 = peg$currPos;
                      s4 = peg$parserange();
                      if (s4 !== peg$FAILED) {
                        peg$reportedPos = s3;
                        s4 = peg$c14(s4);
                      }
                      s3 = s4;
                      if (s3 === peg$FAILED) {
                        s3 = peg$currPos;
                        s4 = peg$parsepassword();
                        if (s4 !== peg$FAILED) {
                          peg$reportedPos = s3;
                          s4 = peg$c15(s4);
                        }
                        s3 = s4;
                        if (s3 === peg$FAILED) {
                          s3 = peg$currPos;
                          s4 = peg$parsecheckbox();
                          if (s4 !== peg$FAILED) {
                            peg$reportedPos = s3;
                            s4 = peg$c16(s4);
                          }
                          s3 = s4;
                          if (s3 === peg$FAILED) {
                            s3 = peg$currPos;
                            s4 = peg$parseradiobutton();
                            if (s4 !== peg$FAILED) {
                              peg$reportedPos = s3;
                              s4 = peg$c14(s4);
                            }
                            s3 = s4;
                            if (s3 === peg$FAILED) {
                              s3 = peg$currPos;
                              s4 = peg$parselabel();
                              if (s4 !== peg$FAILED) {
                                peg$reportedPos = s3;
                                s4 = peg$c10(s4);
                              }
                              s3 = s4;
                              if (s3 === peg$FAILED) {
                                s3 = peg$currPos;
                                s4 = peg$parsebutton();
                                if (s4 !== peg$FAILED) {
                                  peg$reportedPos = s3;
                                  s4 = peg$c17(s4);
                                }
                                s3 = s4;
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c18(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsewhiteline() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseWHITELINE();
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c19();
      }
      s0 = s1;

      return s0;
    }

    function peg$parseline() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseLINE();
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c19();
      }
      s0 = s1;

      return s0;
    }

    function peg$parsetextbox() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseTXT();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseVALUE();
        if (s2 === peg$FAILED) {
          s2 = peg$c1;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseID();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseASSIGN();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseVALUE();
              if (s5 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c20(s2, s3, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsecheckbox() {
      var s0, s1, s2, s3, s4, s5;
